<resources>
    <string name="app_name">SmartPass</string>
    <string name="addButton">добавить аккаунт</string>
    <string name="inputSiteAddress">адрес сайта</string>
    <string name="inputDescription">описание</string>
    <string name="inputLogin">логин</string>
    <string name="inputPass">пароль</string>
    <string name="inputSiteName">название сайта</string>
    <string name="confirmButton">сохранить</string>
    <string name="deleteButton">удалить</string>
    <string name="EncryptPass">шифровать пароль</string>
</resources>
